--- a/simulation_c++/source/Makefile
+++ b/simulation_c++/source/Makefile
@@ -6,13 +6,13 @@ LIBS=-lm -lSDL2main -lSDL2
 CC=g++
 CFLAGS=-I$(IDIR) -std=c++11
 
-_DEPS= particle.h
-DEPS= $(patsubst %,$(IDIR)%,$(_DEPS))
+_DEPS = particle.h
+DEPS = $(patsubst %,$(IDIR)%,$(_DEPS))
 
 _OBJ= particle.o  main_program.o
 OBJ = $(patsubst %,$(ODIR)%,$(_OBJ))
 
-PROG=program
+PROG=main_program
 LIST=$(addprefix $(BIN), $(PROG))
 
 all: $(LIST)
