Added compile files to ignore list
Made git pull ignore the files in bin/ and obj/ in simulation_c++ and Optimized_program folders, as these are compiled files and will not work on other operating systems.

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,9 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# Compiled files of the C++ program, as these are not compatible for different operating systems.
+simulation_c++/bin/*
+simulation_c++/obj/*
+Optimized_program/bin/*
+Optimized_program/obj/*
